# nexus_flix

./: Cargo.toml  README.md  index.html  script.js
obsidian-docs/: API Endpoints.md  Backend Overview.md  External APIs.md  Frontend Overview.md  Project Overview.md  README.md  Settings Management.md  System Architecture.md  Technology Stack.md  UI Components.md  Video Processing.md
obsidian-docs/.obsidian/: workspace.json
obsidian-docs/public/js/: app.md
obsidian-docs/public/js/api/: gemini-api.md  tmdb-api.md
obsidian-docs/public/js/events/: event-handler.md
obsidian-docs/public/js/navigation/: navigation-manager.md
obsidian-docs/public/js/pages/: page-manager.md
obsidian-docs/public/js/themes/: theme-manager.md
obsidian-docs/public/js/ui/: global-settings-modal.md  media-cards.md  modal-manager.md  (+2 more)
obsidian-docs/src/: api_servers.md  main.md  video_servers.md  web_servers.md
obsidian-docs/src/video_servers/: video_helpers.md
public/css/: style.css
public/js/: app.js  script.js  script.js.backup
public/js/api/: backend-tmdb-api.js  gemini-api.js  tmdb-api.js
public/js/events/: event-handler.js
public/js/navigation/: navigation-manager.js
public/js/pages/: page-manager.js
public/js/themes/: theme-manager.js
public/js/ui/: global-settings-modal.js  media-cards.js  modal-manager.js  search-handler.js  settings-modal.js
public/js/video-player/: video-metadata.js  video-player.js  video-response-parser.js  webvtt-parser.js
src/: api_servers.rs  main.rs  tmdb_api.rs  video_servers.rs  web_servers.rs
src/video_servers/: video_helpers.rs
(+4 files in other folders)
