[package]
name = "nexus_flix"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version =  "0.7.12", features = ["full"] }
hyper = "1.5.1"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
infer = "0.19.0"
directories = "6.0.0"
